--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,9 +7,10 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <b>Welcome :</b> <br />
+                        <b>Welcome :&nbsp;{{userInfo.name}}</b> <br />
+                        <b>logged in Using :&nbsp;{{userInfo.email}}</b> <br />
                         <a routerLink="/new-company" class="btn btn-primary">Create Company</a><br />
-                        <button class="btn btn-success">Admin Screen</button>
+                        <a routerLink="/admin" *ngIf="userInfo.admin" class="btn btn-success">Admin</a><br />
                     </div>
                 </div>
             </div>
